src/wondergfx/wg_geo.h

	typedef CoordT<spx>		CoordSPX;
	typedef	CoordT<int>		CoordI;
	typedef BorderT<spx>	BorderSPX;
	typedef BorderT<int>	BorderI;
	typedef	SizeT<spx>		SizeSPX;
	typedef	SizeT<int>		SizeI;
	typedef	RectT<spx>		RectSPX;
	typedef	RectT<int>		RectI;
	//_____________________________________________________________________________
	template<typename Type>
	inline constexpr CoordT<Type>::CoordT(const SizeT<Type>& size)
	: x(size.w), y(size.h)
	{
	}
	//_____________________________________________________________________________
	/**
	 * Get X coordinate of left edge. This is equal to member variable x.
	 **/
	 template<typename Type>
	 inline Type RectT<Type>::left() const
	{
		return x;
	}
	//_____________________________________________________________________________
	/**
	 * Get Y coordinate of top edge. This is equal to member variable y.
	 **/
	 template<typename Type>
	 inline Type RectT<Type>::top() const
	{
		return y;
	}
	//_____________________________________________________________________________
	/**
	 * Get X coordinate of right edge. This is equal to member variables x + w.
	 **/
	 template<typename Type>
	 inline Type RectT<Type>::right() const
	{
		return x + w;
	}
	//_____________________________________________________________________________
	/**
	 * Get Y coordinate of bottom edge. This is equal to member variables y + h.
	 **/
	 template<typename Type>
	 inline Type RectT<Type>::bottom() const
	{
		return y + h;
	}